Small visual text wrapping fix

--- a/src/scss/components/Line.scss
+++ b/src/scss/components/Line.scss
@@ -93,6 +93,7 @@
   &-stationName
   {
     text-align: left;
+    word-break: break-word;
   }
 
   &-transfers
